Added words to workspace dictionary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "Manalac"
+        "bajillion",
+        "imgs",
+        "Manalac",
+        "Midd",
+        "Middlebury",
+        "Tailwindcss"
     ]
 }
